# go-web-project-template

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
cmd/server/: BUILD.bazel  main.go
pkg/adding/: BUILD.bazel  service.go  user.go
pkg/config/: BUILD.bazel  config.go  dev.toml
pkg/http/rest/: BUILD.bazel  handler.go
pkg/listing/: BUILD.bazel  service.go  user.go
pkg/storage/postgres/: BUILD.bazel  repository.go  user.go
pkg/storage/redis/: BUILD.bazel  repository.go
