load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/RainJoe/go-web-project-template/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/adding:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/http/rest:go_default_library",
        "//pkg/listing:go_default_library",
        "//pkg/storage/postgres:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)