load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["handler.go"],
    importpath = "github.com/RainJoe/go-web-project-template/pkg/http/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/adding:go_default_library",
        "//pkg/listing:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
