load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["repository.go"],
    importpath = "github.com/RainJoe/go-web-project-template/pkg/storage/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
    ],
)
